FIX: dark mode bg colour

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,6 @@
   --hippo-brand-yellow: #f9a502;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --hippo-brand-grey: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
   background: var(--hippo-brand-grey);
